--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@ screen.colorDepth:screen.pixelDepth))+";u"+escape(document.URL)+
 							<ul class="top-menu">
 								<li class="current-menu-item" ><a href="/">Домашний мастер</a></li>
 								<li><a href="/electric/">Услуги электрика</a></li>
-								<li><a href="/remont/">Ремонтные работы</a></li>
+								<!--<li><a href="/remont/">Ремонтные работы</a></li>-->
 							</ul>	
 			</div>	
 		</nav>
@@ -143,7 +143,7 @@ screen.colorDepth:screen.pixelDepth))+";u"+escape(document.URL)+
 target="_blank"><img src="//counter.yadro.ru/logo?26.1"
 title="LiveInternet: показано число посетителей за сегодня"
 alt="" border="0" width="88" height="15"/></a></div>
-	<p> © 2020 Домашний мастер в Новосибирске</p>
+	<p> © Домашний мастер в Новосибирске</p>
  </div>
 </div>
 </body>
