--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <link href="/css/style.css?ver=1.2" media="screen" rel="stylesheet" type="text/css" >
 <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed&amp;subset=cyrillic" rel="stylesheet"> 
 <!-- <script src="/js/free_validation.js"></script> -->
-<script src="/js/tel.js"></script>
+<!-- <script src="/js/tel.js"></script> -->
 
 <script>
 	required.add2('Full_Name','NOT_EMPTY','Поле "Имя"');
@@ -82,7 +82,7 @@ screen.colorDepth:screen.pixelDepth))+";u"+escape(document.URL)+
 			<div class="overhead-phone">
 <!-- 			<img src="/img/phone-city.png" alt="" style="position: relative; top: 5px; left: -1px;"/>
  -->			<!--<span style="font-size:70%; color: #055991;" >8 (383)</span> 286-13-8.--><br>
-			<a href="#" id="phone" onclick="tel()"><img src="/img/phone-phederal-2.png" alt="" style="position: relative; top: 5px; left: -1px;"/></a>
+			<a href="#" id="phone" ><img src="/img/phone-phederal-2.png" alt="" style="position: relative; top: 5px; left: -1px;"/></a>
 			</div>
 		</div>
 		<nav class="main-navigation">
