изменил сч яндекс-Метрики, убрал ливИнтернт, и др

--- a/electric/index.html
+++ b/electric/index.html
@@ -11,62 +11,29 @@
 <link href="/css/style.css?ver=1.2" media="screen" rel="stylesheet" type="text/css" >
 <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed&amp;subset=cyrillic" rel="stylesheet"> 
 <!-- <script src="/js/free_validation.js"></script> -->
-<!-- <script src="/js/tel.js"></script>  -->
+<script src="/js/tel.js"></script> 
 
-<script>
-	required.add2('Full_Name','NOT_EMPTY','Поле "Имя"');
-	//required.add2('Email_Address','EMAIL','Поле "E-mail"');
-	required.add2('Telephone_Number','NOT_EMPTY','Поле "Телефон"')
-	required.add2('Your_Message','NOT_EMPTY','Поле "Текст сообщения"')
-	</script>	
+<!-- Yandex.Metrika counter -->
+<script type="text/javascript" >
+   (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
+   m[i].l=1*new Date();
+   for (var j = 0; j < document.scripts.length; j++) {if (document.scripts[j].src === r) { return; }}
+   k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
+   (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
 
-
-	
-
+   ym(45965133, "init", {
+        clickmap:true,
+        trackLinks:true,
+        accurateTrackBounce:true
+   });
+</script>
+<noscript><div><img src="https://mc.yandex.ru/watch/45965133" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
+<!-- /Yandex.Metrika counter -->
 	
 </head>
+
+
 <body id="body">
-<!--<a href="#" onClick="myalert();" >Кликни меня!</a>-->
-
-
-<!--LiveInternet counter-->
-<script type="text/javascript"><!--
-new Image().src = "//counter.yadro.ru/hit?r"+
-escape(document.referrer)+((typeof(screen)=="undefined")?"":
-";s"+screen.width+"*"+screen.height+"*"+(screen.colorDepth?
-screen.colorDepth:screen.pixelDepth))+";u"+escape(document.URL)+
-";"+Math.random();//--></script>
-<!--/LiveInternet-->
-<!-- Yandex.Metrika counter -->
-<script type="text/javascript">
-    (function (d, w, c) {
-        (w[c] = w[c] || []).push(function() {
-            try {
-                w.yaCounter40866834 = new Ya.Metrika({
-                    id:40866834,
-					/* params: window.yaParams,  Код, который мы вставили для определения IP адреса*/
-                    clickmap:true,
-                    trackLinks:true,
-                    accurateTrackBounce:true,
-					webvisor:true
-                });
-            } catch(e) { }
-        });
-
-        var n = d.getElementsByTagName("script")[0],
-            s = d.createElement("script"),
-            f = function () { n.parentNode.insertBefore(s, n); };
-        s.type = "text/javascript";
-        s.async = true;
-        s.src = "https://mc.yandex.ru/metrika/watch.js";
-
-        if (w.opera == "[object Opera]") {
-            d.addEventListener("DOMContentLoaded", f, false);
-        } else { f(); }
-    })(document, window, "yandex_metrika_callbacks");
-</script>
-<noscript><div><img src="https://mc.yandex.ru/watch/40866834" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
-<!-- /Yandex.Metrika counter -->
 
 <div class="main-wrapper">
 	<header class="top-header">
@@ -138,10 +105,6 @@ screen.colorDepth:screen.pixelDepth))+";u"+escape(document.URL)+
 </div>
 <div class="sub-content"> </div>
 <div class="footer"> 
-	<div class="liveinternet"><a href="//www.liveinternet.ru/click"
-target="_blank"><img src="//counter.yadro.ru/logo?26.1"
-title="LiveInternet: показано число посетителей за сегодня"
-alt="" border="0" width="88" height="15"/></a></div>
 	<p> © Домашний мастер в Новосибирске</p>
  </div>
 </div>
