--- a/electric/index.html
+++ b/electric/index.html
@@ -24,7 +24,8 @@
    ym(45965133, "init", {
         clickmap:true,
         trackLinks:true,
-        accurateTrackBounce:true
+        accurateTrackBounce:true,
+        webvisor:true
    });
 </script>
 <noscript><div><img src="https://mc.yandex.ru/watch/45965133" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
