--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@ function checkCursor(){
 </script>
 	
 <!--Myscript counter-->
-<script> // new Image().src = "http://a1057599.xsph.ru/mycounter/counter-yadro/?"+((typeof(screen)=="undefined")?"":
+<script> /* new Image().src = "http://a1057599.xsph.ru/mycounter/counter-yadro/?"+((typeof(screen)=="undefined")?"":
 "s="+screen.width+"*"+screen.height+"*"+(screen.colorDepth?
-screen.colorDepth:screen.pixelDepth))+'&coordx='+cursorX+'&coordy='+cursorY;
+screen.colorDepth:screen.pixelDepth))+'&coordx='+cursorX+'&coordy='+cursorY; */
 </script>
 <!--End Myscript counter-->
 	
